--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -78,15 +78,34 @@
 
             <p>
             <strong>ansible-tf2network</strong> is a set of <strong>Ansible playbooks</strong> for managing a small to medium-sized <strong>Team Fortress 2</strong> server network.<br>
-            see the <strong>tf2 servers</strong> tab to see a list of servers i administrate using these playbooks.
+            see the <a href="#tf2">tf2 servers</a> tab to see a list of servers i administrate using these playbooks.
             </p>
 
             <div class="small-vertical-divider"></div>
 
-            <h3><a target="_blank" href="https://github.com/jack-avery/srpk">srpk</a></h3>
+            <h3><a target="_blank" href="https://github.com/jack-avery/srpk">srpk</a> & <a target="_blank" href="https://github.com/jack-avery/jenc">jenc</a></h3>
 
             <p>
-            <strong>srpk</strong> is a CLI <strong>password manager</strong> made in <strong>Rust</strong> using AES256 and supporting bcrypt cost customization.<br>
+            <strong>srpk</strong> is a CLI <strong>password manager</strong>.<br>
+            <strong>jenc</strong> is a CLI <strong>file encryption tool</strong>.<br>
+            both are made in <strong>Rust</strong> using AES256 and supporting bcrypt cost customization.<br>
+            </p>
+
+            <div class="small-vertical-divider"></div>
+
+            <h3><a target="_blank" href="https://github.com/jack-avery/rsourcequery">rsourcequery</a></h3>
+
+            <p>
+            <strong>rsourcequery</strong> is an asynchronous pure Rust implementation of the
+            <a target="_blank" href="https://developer.valvesoftware.com/wiki/Server_queries">Source Query Protocol</a>.<br>
+            </p>
+
+            <div class="small-vertical-divider"></div>
+
+            <h3><a target="_blank" href="/tf2qp">tf2qp</a></h3>
+
+            <p>
+            <strong>tf2qp</strong> is a work-in-progress reimplementation of Team Fortress 2's legacy <strong>quickplay</strong> system.<br>
             </p>
 
             <div class="small-vertical-divider"></div>
