initial prototype of tf2qp: backend

--- a/roles/deploy/files/web/tf2qp/index.html
+++ b/roles/deploy/files/web/tf2qp/index.html
@@ -86,11 +86,12 @@
             <label>region:
             <select name="region" id="region" onchange="update_form()">
                 <option value="naw">NA West</option>
+                <option value="nac">NA Central</option>
                 <option value="nae">NA East</option>
                 <option value="sa">South America</option>
                 <option value="euw">EU West</option>
                 <option value="eune">EU Northeast</option>
-                <option value="as">East Asia</option>
+                <option value="as">Asia</option>
                 <option value="oce">Oceania</option>
             </select>
             </label>
@@ -104,7 +105,7 @@
             <p>supported networks:</p>
 
             <label><input type="checkbox" id="uncletopia" onclick="update_form()">uncletopia</label>
-            <label><input type="checkbox" id="skial" onclick="update_form()">skial</label>
+            <!-- <label><input type="checkbox" id="skial" onclick="update_form()">skial</label> -->
 
             <br>
             <br>
