--- a/roles/deploy/files/web/tf2qp/index.html
+++ b/roles/deploy/files/web/tf2qp/index.html
@@ -112,7 +112,7 @@
 
             <p>at least one server network must be selected to start searching</p>
             <br>
-            <button id="find_game" onclick="find_game()" disabled>find a game!</button>
+            <button id="find_game" onclick="find_games()" disabled>find a game!</button>
         </div>
 
         <div id="faqtab" class="tab">
