update project status

--- a/roles/deploy/files/web/tf2qp/index.html
+++ b/roles/deploy/files/web/tf2qp/index.html
@@ -38,7 +38,7 @@
         <h3>expect missing or broken functionality!</h3>
         <p>
             this page contains features actively in development.<br>
-            it's currently a <strong>proof of concept</strong>.<br>
+            it's currently a <strong>rough prototype</strong>.<br>
             how did you get here? did <i>they</i> send you?
         </p>
 
