add skial and swishcast

--- a/roles/deploy/files/web/tf2qp/index.html
+++ b/roles/deploy/files/web/tf2qp/index.html
@@ -106,7 +106,8 @@
             <p>supported networks:</p>
 
             <label><input type="checkbox" id="uncletopia" onclick="update_form()">uncletopia</label>
-            <!-- <label><input type="checkbox" id="skial" onclick="update_form()">skial</label> -->
+            <label><input type="checkbox" id="skial" onclick="update_form()">skial</label>
+            <label><input type="checkbox" id="swishcast" onclick="update_form()">swishcast</label>
 
             <br>
             <br>
