handle changing ip mode

--- a/roles/deploy/files/web/tf2qp/index.html
+++ b/roles/deploy/files/web/tf2qp/index.html
@@ -117,7 +117,7 @@
             <button id="search" class="search" onclick="search(populate_server_list)" disabled>search</button>
             <button id="im_feeling_lucky" class="search" onclick="search(im_feeling_lucky)" disabled>i'm feeling lucky</button>
             <br>
-            <label><input type="checkbox" id="ip_mode" onclick="update_form()">only show IP addresses (for favorites)</label>
+            <label><input type="checkbox" id="ip_mode" onclick="change_ip_mode()">only show IP addresses (for favorites)</label>
             <br>
             <br>
             <p class="error" id="error_text"></p>
