--- a/roles/deploy/files/web/tf2qp/index.html
+++ b/roles/deploy/files/web/tf2qp/index.html
@@ -104,7 +104,7 @@
             <br>
             <br>
 
-            <p>at least one server network must be selected to start searching</p>
+            <p>at least one network and region must be selected to start searching</p>
             <br>
             <button id="search" class="search" onclick="search(populate_server_list)" disabled>search</button>
             <button id="im_feeling_lucky" class="search" onclick="search(im_feeling_lucky)" disabled>i'm feeling lucky</button>
