--- a/roles/deploy/files/web/tf2qp/index.html
+++ b/roles/deploy/files/web/tf2qp/index.html
@@ -100,6 +100,7 @@
             <label><input type="checkbox" id="uncletopia" onclick="update_form()">uncletopia</label>
             <label><input type="checkbox" id="skial" onclick="update_form()">skial</label>
             <label><input type="checkbox" id="swishcast" onclick="update_form()">swishcast</label>
+            <label><input type="checkbox" id="oprah" onclick="update_form()">oprah's petrol station</label>
 
             <br>
             <br>
