--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -194,7 +194,8 @@
             note that this list is not exhaustive as i have been asked to keep some confidential.<br>
             1. <a target="_blank" href="https://github.com/jack-avery/gpbl-bot">gpbl-bot</a>, a 24/7 music playing discord bot for a rap community<br>
             2. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/bff">boxes4foxes</a>, a team fortress 2 community server network<br>
-            3. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/swishcast">another</a> tf2 server for the podcast 'SwishCast'<br>
+            3. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/swishcast">SwishCast Central</a>, a tf2 server for the MANN Magazine's podcast 'The SwishCast'<br>
+            4. <a target="_blank" href="https://github.com/jack-avery/ansible-tf2network/tree/bestwater">badwater bestwater</a>, a 24/7 badwater tf2 server<br>
             <br>
 
             <strong>4. my idea is a bit fuzzy or unfinished. can you work with that?</strong><br>
@@ -244,6 +245,16 @@
 
                 <a target="_blank" href="https://www.youtube.com/@MANN_Magazine">youtube channel</a><br>
                 <a target="_blank" href="https://discord.gg/CykAHkzkhx">discord server</a><br>
+            </p>
+
+            <div class="vertical-divider"></div>
+
+            <h3>badwater bestwater</h3>
+
+            <p>
+                <strong>badwater bestwater</strong> is a <strong>24/7 pl_badwater</strong> server.<br><br>
+
+                <a target="_blank" href="https://discord.gg/RWkHPaKy">discord server</a><br>
             </p>
         </div>
 
