add casual.tf; improve frontend network selection

--- a/roles/deploy/files/web/tf2qp/index.html
+++ b/roles/deploy/files/web/tf2qp/index.html
@@ -88,10 +88,7 @@
             <br>
 
             <p>supported networks:</p>
-            <label><input type="checkbox" id="uncletopia" onclick="update_form()">uncletopia</label>
-            <label><input type="checkbox" id="skial" onclick="update_form()">skial</label>
-            <label><input type="checkbox" id="swishcast" onclick="update_form()">swishcast</label>
-            <label><input type="checkbox" id="oprah" onclick="update_form()">oprah's petrol station</label>
+            <div id="networks_container"></div>
 
             <br>
             <br>
