--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -225,19 +225,6 @@
 
             <div class="vertical-divider"></div>
 
-            <h3><a target="_blank" href="https://www.boxesforfoxes.net/">Boxes 4 Foxes</a></h3>
-
-            <p>
-                <strong>Boxes 4 Foxes</strong> is a network with servers running improved versions of the popular maps <strong>hightower</strong>, <strong>2fort</strong>, and <strong>turbine</strong>,
-                a hang-out server where players can chat and explore fun custom maps, as well as my custom gamemode <strong>rinstagib</strong>.<br><br>
-
-                <a target="_blank" href="https://steamcommunity.com/groups/BoxesForFoxes">steam group</a><br>
-                <a target="_blank" href="https://discord.gg/6rTTw8gUER">discord server</a><br>
-                <a target="_blank" href="https://boxes4foxes.site.nfoservers.com/sourcebans/">sourcebans</a><br>
-            </p>
-
-            <div class="vertical-divider"></div>
-
             <h3>SwishCast Central</h3>
 
             <p>
@@ -255,6 +242,15 @@
                 <strong>badwater bestwater</strong> is a <strong>24/7 pl_badwater</strong> server.<br><br>
 
                 <a target="_blank" href="https://discord.gg/RWkHPaKy">discord server</a><br>
+            </p>
+
+            <div class="vertical-divider"></div>
+
+            <h3>Boxes 4 Foxes</h3>
+
+            <p>
+                <strong>Boxes 4 Foxes</strong> was a network with servers running improved versions of the popular maps <strong>hightower</strong>, <strong>2fort</strong>, and <strong>turbine</strong>,
+                a hang-out server where players can chat and explore fun custom maps, as well as my custom gamemode <strong>rinstagib</strong>.
             </p>
         </div>
 
