--- a/roles/deploy/files/web/index.html
+++ b/roles/deploy/files/web/index.html
@@ -30,6 +30,7 @@
                 <button class="navtab" onclick="tab('about')" id="aboutnav">about</button>
                 <button class="navtab" onclick="tab('projects')" id="projectsnav">projects</button>
                 <button class="navtab" onclick="tab('commissions')" id="commissionsnav">commissions</button>
+                <button class="navtab" onclick="tab('devblog')" id="devblognav">devblog</button>
                 <button class="navtab" onclick="tab('tf2')" id="tf2nav">tf2 servers</button>
             </div>
         </header>
@@ -252,6 +253,10 @@
                 <strong>Boxes 4 Foxes</strong> was a network with servers running improved versions of the popular maps <strong>hightower</strong>, <strong>2fort</strong>, and <strong>turbine</strong>,
                 a hang-out server where players can chat and explore fun custom maps, as well as my custom gamemode <strong>rinstagib</strong>.
             </p>
+        </div>
+
+        <div id="devblogtab" class="tab">
+            <p>august 2, 2024 - <a href="post/debian_install_for_arch_users.html">installing debian (for arch users)</a></p>
         </div>
 
         <div class="vertical-divider"></div>
